diesel-factories/tests/compile_fail/foreign_key_name_on_non_association.stderr
error: `#[factory]` attributes are only allowed on association fields
  --> tests/compile_fail/foreign_key_name_on_non_association.rs:39:5
   |
39 | /     #[factory(foreign_key_name = not_allowed_here)]
40 | |     pub age: i32,
   | |________________^

error[E0599]: no method named `country` found for struct `UserFactory` in the current scope
  --> tests/compile_fail/foreign_key_name_on_non_association.rs:75:10
   |
38 |   struct UserFactory<'a> {
   |   ---------------------- method `country` not found for this struct
...
74 | /     UserFactory::default()
75 | |         .country(CountryFactory::default())
   | |         -^^^^^^^--------------------------- help: remove the arguments
   | |         ||
   | |_________|field, not a method
   |
